--- a/quiz_api/css/style.css
+++ b/quiz_api/css/style.css
@@ -32,3 +32,7 @@ p.category {
     color: white!important;
     font-size: 1.2rem;
 }
+.btn-success {
+    color: white!important;
+    font-size: 1.2rem;
+}
